--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ body{
     color: white;
     width: 80%;
     text-align: center;
-    margin-bottom: 50px;
+    margin: 30px 0;
 }
 .upload{
     font-size: 22px;
@@ -51,9 +51,70 @@ body{
     height: 400px;
     user-select: none;
 }
-.upload_rect:hover{
+.upload_rect.dragover{
+    border-color: #FF6B36;
     box-shadow: 0 0 25px var(--ColMagma);
 }
-.upload_rect.dragover{
-    border-color: white;
+.main_container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding-top: 100px;
+}
+.preview{
+    display: flex;
+    justify-content: center;
+    width: 50%;
+}
+.prev_img{
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;
+}
+.inputs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+.inputbox{
+    width: 500px;
+    height: 60px;
+    color: var(--ColMagma);
+    background-color: #202020;
+    margin: 20px;
+    outline: none;
+    padding: 0 10px;
+
+    border: 5px solid var(--ColMagma);
+    border-radius: 20px;
+
+    font-size: 30px;
+    font-family: "Varela Round", sans-serif;
+}
+.inputbox:focus{
+    border-color: #FF6B36;
+    box-shadow: 0 0 25px var(--ColMagma);
+}
+.button{
+    width: 530px;
+    height: 70px;
+    color: var(--ColMagma);
+    background-color: #202020;
+    margin: 20px;
+    outline: none;
+
+    border: 5px solid var(--ColMagma);
+    border-radius: 20px;
+
+    font-size: 30px;
+    font-family: "Varela Round", sans-serif;
+}
+.button:hover{
+    border-color: #FF6B36;
+    box-shadow: 0 0 25px var(--ColMagma);
+    cursor: pointer;
 }
