--- a/src/style.css
+++ b/src/style.css
@@ -81,10 +81,22 @@ body{
     justify-content: center;
     width: 50%;
 }
+.preview_border{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    height: 350px;
+
+    border: 5px solid var(--ColMagma);
+    border-radius: 30px;
+}
 .prev_img{
     width: 300px;
     height: 300px;
+    object-fit: contain;
     margin: 20px;
+    color: white;
 
     image-rendering: pixelated;
 
@@ -99,7 +111,7 @@ body{
 .inputbox{
     width: 500px;
     height: 60px;
-    color: var(--ColMagma);
+    color: white;
     background-color: #202020;
     margin: 20px;
     outline: none;
@@ -118,7 +130,7 @@ body{
 .button{
     width: 530px;
     height: 70px;
-    color: var(--ColMagma);
+    color: white;
     background-color: #202020;
     margin: 20px;
     outline: none;
